# Craft-your-IC

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml  shell.nix
nix/: 0001-pyproject-fix-build-system-with-poetry-core.patch  litemapy.nix  nbtlib.nix
src/: __init__.py  parser.py
