[tool.poetry]
name = "v-risc-v"
version = "0.1.0"
description = ""
authors = ["Gabriel Doriath Döhler <gabriel.doriath.dohler@ens.fr>", "Constantin Gierczak--Galle <cst1@mailbox.org>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
litemapy = "^0.7.2b0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
